--- a/index.html
+++ b/index.html
@@ -27,14 +27,33 @@
 
         <section class="movie-grid">
             <div class="movie-card">
-                <img src="https://via.placeholder.com/200x300" alt="Movie Poster">
-                <h3>Movie Title</h3>
-                <p>Action | 2025</p>
+                <img src="https://upload.wikimedia.org/wikipedia/en/7/7f/Inception_ver3.jpg" alt="Inception">
+                <h3>Inception</h3>
+                <p>Sci-Fi | 2010</p>
             </div>
+
             <div class="movie-card">
-                <img src="https://via.placeholder.com/200x300" alt="Series Poster">
-                <h3>Series Title</h3>
-                <p>Drama | Season 3</p>
+                <img src="https://upload.wikimedia.org/wikipedia/en/a/a7/Avengers_Endgame_poster.jpg" alt="Avengers: Endgame">
+                <h3>Avengers: Endgame</h3>
+                <p>Action | 2019</p>
+            </div>
+
+            <div class="movie-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/8/8e/Dune_Part_Two_poster.jpg" alt="Dune: Part Two">
+                <h3>Dune: Part Two</h3>
+                <p>Adventure | 2024</p>
+            </div>
+
+            <div class="movie-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/2/2e/The_Batman_%282022_film%29_poster.jpg" alt="The Batman">
+                <h3>The Batman</h3>
+                <p>Crime | 2022</p>
+            </div>
+
+            <div class="movie-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Interstellar_film_poster.jpg" alt="Interstellar">
+                <h3>Interstellar</h3>
+                <p>Sci-Fi | 2014</p>
             </div>
         </section>
     </main>
